Fix: bugs,links

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 minimal_mistakes_skin: "contrast"
-title: "Ben Eyal's Website"
+title: "Pushpesh's Website"
 title_separator: "-"
-name: "Ben Eyal"
+name: "Pushpesh Gokul Pant"
 
 atom_feed:
   hide: true
@@ -12,14 +12,14 @@ plugins:
   - jemoji
 
 author:
-  name: "Ben Eyal"
+  name: "Pushpesh Gokul Pant"
   avatar: "/assets/images/profile_small.png"
-  bio: "Engineer @ AI2, working on my PhD in Natural Language Processing @ BGU"
-  location: Rehovot, Israel
+  bio: "Intern Programmer at SMVDU RP-126"
+  location: Katra, India
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/beneyal"
+      url: "https://github.com/xPushpeshx"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/beneyal/"
