update: pdf links

--- a/_config.yml
+++ b/_config.yml
@@ -22,4 +22,4 @@ author:
       url: "https://github.com/xPushpeshx"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/beneyal/"
+      url: "https://www.linkedin.com/in/pushpesh-gokul-pant-807023202/"
