--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,6 @@ main:
   - title: Projects
     url: /projects/
   - title: Miscellaneous
-    ur: /exp/
+    url: /exp/
   - title: Resume
     url: /assets/docs/pushpesh_resume.pdf
