--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 main:
   - title: Projects
     url: /projects/
-  - title: Miscellaneous
+  - title: Experience
     url: /exp/
   - title: Resume
     url: /assets/docs/pushpesh_resume.pdf
