Fix: experience tab

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ plugins:
 author:
   name: "Pushpesh Gokul Pant"
   avatar: "/assets/images/profile_small.png"
-  bio: "Masters Student at IIT Guwahati"
+  bio: "Master's in AI and Robotics at IIT Guwahati"
   location: Assam, India
   links:
     - label: "GitHub"
